# nocturne

./: .claudeignore  .gitignore  ARTICLE.md  Anchor.toml  Cargo.toml  DEPLOYMENT.md  FIXES.md  FUTURE_SHADOWWIRE_INTEGRATION.md  GROTH16_STATUS.md  LIGHT_PROTOCOL_INTEGRATION.md  MAGICBLOCK_TEE_INTEGRATION.md  Makefile  PRD.md  PRIVACY_ARCHITECTURE.md  PRIVACY_CASH_INTEGRATION.md  README.md  SECURITY.md  SECURITY_ANALYSIS.md  TECHNICAL_SPEC.md  TODO.md  USAGE_GUIDE.md  USE_CASES.md
circuits/: package-lock.json  package.json  stealth_address.circom
circuits/circom/: deposit.circom  package.json  withdraw.circom
circuits/noir/deposit/: Nargo.toml
circuits/noir/transfer/: Nargo.toml
circuits/noir/withdraw/: Nargo.toml
circuits/scripts/: setup.sh
cli/: Cargo.toml
cli/src/: config.rs  crypto.rs  fuzz_tests.rs  integration_tests.rs  main.rs  native_stealth.ts  relayer_client.ts  secure_storage.rs  shadowwire.ts  test_vectors.rs  tests.rs
cli/src/commands/: address.rs  balance.rs  export_view_key.rs  info.rs  keygen.rs  mod.rs  register.rs  scan.rs  send.rs  withdraw.rs
coinjoin/: package-lock.json  package.json
coinjoin/src/: blind-sig.ts  server.ts  threshold-rsa.ts  tor-support.ts  types.ts
coinjoin/src/distributed/: coordinator-network.ts  distributed-server.ts  index.ts
coinjoin/tests/: e2e.test.ts
config/: defaults.ts
docker/: docker-compose.yml
docker/coordinator/: Dockerfile
docker/scripts/: dkg-ceremony.sh
docker/verifier/: Dockerfile
frontend/: README.md  UX-IMPROVEMENTS.md  compute-zero-hashes.mjs  init-tee-relayer.ts  next.config.ts  package-lock.json  package.json  set-tee-pubkey.ts  test-1sol.ts  test-complete-e2e.ts  test-devnet-01sol.ts  test-devnet-e2e.ts  test-devnet-full.ts  test-fresh.ts  test-light-protocol.mjs  test-localnet-e2e.ts  test-privacy-audit.ts  test-skip-preflight.ts  test-tee-flow.ts  test-zk-shield.ts  tsconfig.json  verification_key.json  verification_key_bytes.json
frontend/public/circuits/: deposit.json  withdraw.json
frontend/scripts/: convert-vk.mjs  init-pools.mjs  init-verification-key.mjs  test-e2e.mjs  test-full-privacy.mjs  test-groth16-e2e.mjs  test-light-e2e.mjs  test-tee-batch-e2e.mjs
frontend/src/app/: layout.tsx  page.tsx  providers.tsx
frontend/src/lib/: ThemeContext.tsx  bulletproof.ts  groth16-prover.ts  helius.ts  light-privacy.ts  magicblock-per.ts  magicblock-tee.ts  merkle-rebuilder.ts  noir-prover.ts  note-backup.ts  note-storage.ts  privacy-backend.ts  privacy-config.ts  privacy-pool.ts  program.ts  range-client.ts  relayer.ts  secure-storage.ts  shadowwire.ts  stealth.ts  tee-batch-client.ts  tee-encryption.ts  tee-relayer-client.ts  tee-staging-client.ts  test-compliance.ts  test-range-live.ts  test-tee.ts  theme-safelist.tsx  themes.ts  veil.ts  (+3 more)
programs/stealth/: Cargo.toml
programs/stealth/data/: deposit_vk.json  withdraw_vk.json
programs/stealth/src/: error.rs  lib.rs  tests.rs
programs/stealth/src/crypto/: dksap.rs  keys.rs  merkle.rs  mod.rs  poseidon.rs
programs/stealth/src/instructions/: blended_transfer.rs  commit_reveal.rs  confidential_transfer.rs  decoy.rs  denomination_registry.rs  init_verification_key.rs  keeper.rs  mod.rs  private_deposit.rs  private_withdraw.rs  register.rs  relayer.rs  send.rs  simple_deposit.rs  unified_privacy.rs  verified_withdraw.rs  verify_send.rs  view_key.rs  withdraw.rs
programs/stealth/src/state/: announcement.rs  announcement_log.rs  decoy.rs  mod.rs  privacy_pool.rs  registry.rs  relayer.rs  withdrawal_commitment.rs
programs/stealth/src/zk/: groth16.rs  mod.rs  types.rs  verifier.rs
programs/tee-bridge/: Cargo.toml
programs/tee-bridge/src/: lib.rs
programs/tee-relayer/: Cargo.toml  tee-relayer-keypair.json
programs/tee-relayer/src/: lib.rs
relayer/: .env.example  package-lock.json  package.json
relayer/src/: server.ts
scripts/: decoy-bot.ts  demo.sh  e2e-test.ts  init-pool.ts  init-vk.ts  integration-test.js  package-lock.json  package.json  relayer-service.ts  setup.sh
tools/: Cargo.toml  compute_zero_hashes.rs
verifier/: Dockerfile  docker-compose.yml  index.js  package.json  threshold-verifier.js
verifier/circuits/: withdraw_verification_key.json
(+15 files in other folders)
