[workspace]
members = [
    "programs/stealth",
    "programs/tee-bridge",
    "programs/tee-relayer",
    "cli",
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.dependencies]
anchor-lang = "0.30.1"
solana-program = "1.18.26"
solana-sdk = "1.18.26"
solana-client = "1.18.26"
solana-account-decoder = "1.18.26"

# Cryptography - use v3 to match Solana's curve25519
curve25519-dalek = { version = "3.2", default-features = false, features = ["alloc", "u64_backend"] }
sha2 = { version = "0.10", default-features = false }
rand = "0.8"
zeroize = { version = "1.3", features = ["zeroize_derive"] }

# Serialization
borsh = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
dirs = "5.0"
bs58 = "0.5"
hex = "0.4"

# Errors
thiserror = "1.0"
anyhow = "1.0"

# Security
aes-gcm = "0.10"
argon2 = "0.5"
subtle = "2.4"
