[package]
name = "stealth-cli"
version = "0.1.0"
description = "CLI for StealthSol - Stealth Address Protocol on Solana"
edition = "2021"

[[bin]]
name = "stealthsol"
path = "src/main.rs"

[dependencies]
# Solana
solana-sdk = { workspace = true }
solana-client = { workspace = true }
solana-account-decoder = { workspace = true }

# Anchor client
anchor-client = "0.30.1"

# Cryptography
curve25519-dalek = { workspace = true }
ed25519-dalek = { version = "1.0", features = ["serde"] }
sha2 = { workspace = true }
rand = { workspace = true }
zeroize = { workspace = true }

# Key recovery
bip39 = { version = "2.0", features = ["rand"] }

# CLI
clap = { workspace = true }
tokio = { workspace = true }
dirs = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bs58 = { workspace = true }
hex = { workspace = true }
borsh = { workspace = true }

# Errors
thiserror = { workspace = true }
anyhow = { workspace = true }

# Utils
chrono = "0.4"
colored = "2.0"

# Security
aes-gcm = { workspace = true }
argon2 = { workspace = true }
subtle = { workspace = true }
base64 = "0.21"
rpassword = "7.3"


[dev-dependencies]
proptest = "1.4"
tempfile = "3.10"
