[package]
name = "stealth"
version = "0.1.0"
description = "Stealth Address Protocol for Solana using DKSAP"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "stealth"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]
# IMPORTANT: Enable this for mainnet/devnet deployments
# This enables real ZK proof verification via oracle attestations
production = []

[dependencies]
anchor-lang = { workspace = true }
borsh = { workspace = true }

# Pin to avoid edition2024 requirement
blake3 = "=1.5.0"
constant_time_eq = "=0.3.0"

[dev-dependencies]
solana-program-test = "1.18.26"
solana-sdk = { workspace = true }
tokio = { workspace = true }
rand = { workspace = true }
